2010-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/de4_0.cpp:
	  - Removed a few more unused variables
	  - moved some variable declaration down to where they are use
	  - turned one do-while into for(;;) loop
	  - replaced macros with proper try/catch block
	  - made a few more variables local

2010-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/de4_0.cpp:
	  - Switched from NP in rows to cols which with Armadillo's internal
  	    organisation gets a speed up for larger parameter vectors
	    (starting around n=10)
	  - d_storepop is now a Rcpp::List, filled directly with matrices
	  - the strategy if/elseif/else tree is now a switch()
	  - use static_cast<int>(::unif_rand())
	  - use ::unif_rand() to show this is a 'global' R namespace object
	* R/DEoptim.R: No longer need to create list of populations by hand

	* src/evaluate.cpp: Simplied using REAL() to get to pointer
	* demo/SmallBenchmark.R: Added
	* demo/LargeBenchmark.R: Added

2010-10-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/de4_0.cpp:
	  - converted to Armadillo use throughout
	  - initialpop is a matrix (not vector) on entry
	  - d_pop is a matrix too
	  - removed a number of 'element copying' loop

	* R/DEoptim.R: changed to send and receive matrices rather than
	  vectors that need to be recast to matrix

2010-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/de4_0.cpp (permute): temp. urn vector now allocated above and passed

	* src/Makevars: Added, to permit linking against Rcpp

	* src/de4_0.cpp: Converted to C++ from C, added minimal first set of Rcpp
	* src/get_element.c: Removed as no longer needed with Rcpp

	* benchmark.txt: Added log of results

	* benchmark.r: Added simple benchmark comparison to DEoptim

	* data/xrrData.rda, data.SMI.rda: Removed in this package as unused
	* man/xrrData.Rd, man/SMI.Rd: Removed in this package as unused

	* src/de4_0.c (devol): removed unused variable 'x'

	* cleanup: Added cleanup script

2010-10-14  Dirk Eddelbuettel  <edd@debian.org>
